--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -11,7 +11,7 @@
 <div class="loading"></div>
 
 <script src="/asserts/sea.js" id="seajsnode"></script>
-<script src="/asserts/seaConfig.js"></script>
+<script src="/asserts/sea-config.js"></script>
 <script src="/asserts/lib.js"></script>
 <script src="/asserts/main.js"></script>
 <script>
