--- a/pages/article/list.html
+++ b/pages/article/list.html
@@ -1,40 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <link type="text/css" rel="stylesheet" href="/asserts/lib/bootstrap/bootstrap.css">
-    <link type="text/css" rel="stylesheet" href="/asserts/styles/article.css">
+{% extends "../layout.html" %}
+{% block body %}
+<div class="article">
+    <div class="container">
+        <h1>{{title}}</h1>
 
-</head>
-<body class="article">
-<div class="container">
-    <h1>{{title}}</h1>
+        <div class="">
+            <button id="btn-new" class="btn btn-danger">新建</button>
+            <button id="btn-save" class="pull-right btn btn-success">提交</button>
+        </div>
 
-    <div class="">
-        <button id="btn-new" class="btn btn-danger">新建</button>
-        <button id="btn-save" class="pull-right btn btn-success">提交</button>
+        <form>
+            <div class="form-group">
+                <input id="title" type="text" class="form-control">
+            </div>
+            <div class="form-group">
+                <textarea id="content" class="form-control"></textarea>
+            </div>
+        </form>
+
+        <div class="preview"></div>
     </div>
-
-    <form>
-        <div class="form-group">
-            <input id="title" type="text" class="form-control">
-        </div>
-        <div class="form-group">
-            <textarea id="content" class="form-control"></textarea>
-        </div>
-    </form>
-
-    <div class="preview"></div>
 </div>
+{% endblock %}
 
-<script src="/asserts/sea.js"></script>
-<script src="/asserts/sea-config.js"></script>
-<script src="/asserts/lib.js"></script>
-<script src="/asserts/main.js"></script>
-
+{% block pagejs %}
 <script>
-    seajs.use('scripts/article');
+    seajs.use('/asserts/scripts/article');
 </script>
-</body>
-</html>
+{% endblock %}
