--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,7 @@
 {% extends "./layout.html" %}
 {% block body %}
-<div class="gallery">
+<div class="home">
+    <h1>{{title}}</h1>
     <div class="cover"></div>
     <div class="loading"></div>
 </div>
@@ -8,6 +9,6 @@
 
 {% block pagejs %}
 <script>
-    seajs.use('/asserts/scripts/gallery');
+    seajs.use('/asserts/scripts/home');
 </script>
 {% endblock %}
