--- a/pages/demo.html
+++ b/pages/demo.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title ng-bind="global.title"></title>
     <base href="/">
     <!-- build:css(.) /asserts/lib-demo.css -->
     <link type="text/css" rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
