--- a/pages/demo.html
+++ b/pages/demo.html
@@ -12,6 +12,7 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/common.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/home.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/gallery.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/box.css">
     <!-- endbuild -->
 
     <!-- build:js(.) /asserts/angular-demo.js -->
@@ -40,6 +41,7 @@
 <script src="/asserts/scripts/demo/directive.js"></script>
 <script src="/asserts/scripts/demo/controller/homeCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/galleryCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/boxCtrl.js"></script>
 <!-- endbuild -->
 
 <script src="/asserts/template-demo.js"></script>
