--- a/pages/home.html
+++ b/pages/home.html
@@ -7,6 +7,9 @@
         <li>
             <a href="demo/gallery">Gallery</a>
         </li>
+        <li>
+            <a href="demo/box">box</a>
+        </li>
     </ul>
     <div class="loading"></div>
 </div>
