--- a/pages/demo.html
+++ b/pages/demo.html
@@ -13,6 +13,7 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/home.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/gallery.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/box.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/timer.css">
     <!-- endbuild -->
 
     <!-- build:js(.) /asserts/angular-demo.js -->
@@ -42,6 +43,7 @@
 <script src="/asserts/scripts/demo/controller/homeCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/galleryCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/boxCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/timerCtrl.js"></script>
 <!-- endbuild -->
 
 <script src="/asserts/template-demo.js"></script>
