--- a/pages/demo.html
+++ b/pages/demo.html
@@ -14,6 +14,7 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/gallery.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/box.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/timer.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/canvas.css">
     <!-- endbuild -->
 
     <!-- build:js(.) /asserts/angular-demo.js -->
@@ -36,6 +37,7 @@
 <!-- endbuild -->
 
 <!-- build:js(.) /asserts/main-demo.js -->
+<script src="/asserts/scripts/util.js"></script>
 <script src="/asserts/scripts/demo/app.js"></script>
 <script src="/asserts/scripts/demo/route.js"></script>
 <script src="/asserts/scripts/demo/service.js"></script>
@@ -44,6 +46,7 @@
 <script src="/asserts/scripts/demo/controller/galleryCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/boxCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/timerCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/canvasCtrl.js"></script>
 <!-- endbuild -->
 
 <script src="/asserts/template-demo.js"></script>
