--- a/pages/demo.html
+++ b/pages/demo.html
@@ -10,11 +10,13 @@
 
     <!-- build:css(.) /asserts/main-demo.css -->
     <link type="text/css" rel="stylesheet" href="/asserts/styles/common.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/directive.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/home.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/gallery.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/box.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/timer.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/canvas.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/test.css">
     <!-- endbuild -->
 
     <!-- build:js(.) /asserts/angular-demo.js -->
@@ -37,18 +39,20 @@
 <!-- endbuild -->
 
 <!-- build:js(.) /asserts/main-demo.js -->
-<script src="/asserts/scripts/util.js"></script>
+<script src="/asserts/scripts/common/util.js"></script>
 <script src="/asserts/scripts/demo/app.js"></script>
 <script src="/asserts/scripts/demo/route.js"></script>
 <script src="/asserts/scripts/demo/service.js"></script>
-<script src="/asserts/scripts/demo/directive.js"></script>
+<script src="/asserts/scripts/common/filter.js"></script>
+<script src="/asserts/scripts/common/directive.js"></script>
 <script src="/asserts/scripts/demo/controller/homeCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/galleryCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/boxCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/timerCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/canvasCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/testCtrl.js"></script>
 <!-- endbuild -->
 
-<script src="/asserts/template-demo.js"></script>
+<script src="/asserts/template.js"></script>
 </body>
 </html>
