--- a/pages/layout.html
+++ b/pages/layout.html
@@ -27,7 +27,7 @@
 <!-- endbuild -->
 
 <!--SeaJS引用-->
-<script src="/asserts/main-outer.js"></script>
+<script src="/asserts/main.js"></script>
 
 <!--页面内嵌JS代码-->
 {% block pagejs %}{% endblock %}
