--- a/pages/demo.html
+++ b/pages/demo.html
@@ -16,6 +16,7 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/box.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/timer.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/canvas.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/fan.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/test.css">
     <!-- endbuild -->
 
@@ -50,6 +51,7 @@
 <script src="/asserts/scripts/demo/controller/boxCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/timerCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/canvasCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/fanCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/testCtrl.js"></script>
 <!-- endbuild -->
 
