--- a/pages/demo.html
+++ b/pages/demo.html
@@ -17,6 +17,7 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/timer.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/canvas.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/fan.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/paint.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/test.css">
     <!-- endbuild -->
 
@@ -52,6 +53,7 @@
 <script src="/asserts/scripts/demo/controller/timerCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/canvasCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/fanCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/paintCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/testCtrl.js"></script>
 <!-- endbuild -->
 
