--- a/pages/demo.html
+++ b/pages/demo.html
@@ -18,6 +18,7 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/canvas.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/fan.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/paint.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/book.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/test.css">
     <!-- endbuild -->
 
@@ -54,6 +55,7 @@
 <script src="/asserts/scripts/demo/controller/canvasCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/fanCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/paintCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/bookCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/testCtrl.js"></script>
 <!-- endbuild -->
 
