--- a/pages/demo.html
+++ b/pages/demo.html
@@ -19,10 +19,12 @@
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/fan.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/paint.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/book.css">
+    <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/cycle.css">
     <link type="text/css" rel="stylesheet" href="/asserts/styles/demo/test.css">
     <!-- endbuild -->
 
     <!-- build:js(.) /asserts/angular-demo.js -->
+    <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -56,6 +58,7 @@
 <script src="/asserts/scripts/demo/controller/fanCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/paintCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/bookCtrl.js"></script>
+<script src="/asserts/scripts/demo/controller/cycleCtrl.js"></script>
 <script src="/asserts/scripts/demo/controller/testCtrl.js"></script>
 <!-- endbuild -->
 
